Fixing spacing problems between divs

--- a/css/app.css
+++ b/css/app.css
@@ -2471,7 +2471,7 @@ p {
   left: 0;
   width: 100%;
   right: 0;
-  height: 3.7rem;
+  height: 4rem;
   line-height: 4.5rem; }
   .end > ul > li {
     color: white;
