--- a/css/layouts/_home.scss
+++ b/css/layouts/_home.scss
@@ -193,7 +193,7 @@ p {
   left: 0;
   width: 100%;
   right: 0;
-  height: 3.7rem;
+  height: 4rem;
   line-height: $title-bar-height;
 
   & > ul > li {
